package edu.utfpr.cp.dacom.sa.soilcorrection;

public interface Conversao<T, R> {

  public R converte(T valor);
}
