package edu.utfpr.cp.dacom.sa.soilcorrection;

public class CorrecaoFosforo
        implements
        ICorrecaoNutriente<FonteFosforo>,
        ICorrecaoNutrienteQuantidadeAplicar<FonteFosforo> {

}
