package edu.utfpr.cp.dacom.sa.soilcorrection;

public class MainClass {

  public static void main(String[] args) {
    System.out.println("Main class");
  }
}
