package edu.utfpr.cp.dacom.sa.soilcorrection;

public enum NomeNutrienteAdicional {
  ENXOFRE,
  CALCIO,
  NITROGENIO,
  MAGNESIO;
}
